syntax = "proto3";

package com.sokima.grpc;

option java_multiple_files = true;
option java_package = "com.sokima.grpc.service";

message BalanceCheckRequest {
  int32 account_number = 1;
}

message WithdrawalRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

message DepositRequest {
  int32 account_number = 1;
  int32 amount = 2;
}

// USD
message Balance {
  int32 amount = 1;
}

message Money {
  int32 value = 1;
}

service BankService {
  // unary
  rpc getBalance(BalanceCheckRequest) returns (Balance);

  // server-side streaming
  rpc withdraw(WithdrawalRequest) returns (stream Money);

  // client-side streaming
  rpc cashDeposit(stream DepositRequest) returns (Balance);
}